tests/cases/modules/ok/file-relative-child-main.ari
mod file_relative_child;

fn main() -> i64 {
  return file_relative_child::run();
}
