tests/cases/modules/errors/invalid-module-path-syntax.ari
mod invalid::path;

fn main() -> i64 {
  return 0;
}
